# MUA-DataPlatform

./: .dockerignore  .gitignore  .ruff.toml  README.md  pyproject.toml
deploy/: .env.example  Dockerfile  README.md  docker-compose.cloud.yml  docker-compose.yml  validate-deployment.sh
docs/exec-plans/: tech-debt-tracker.md
docs/plans/: 2026-03-25-recording-repair-plan.md
droidbot/: app.py  constant.py  device.py  device_state.py  droidbot.py  env_manager.py  input_event.py  input_manager.py  input_policy.py  resource_utils.py  start.py  utg.py
droidbot/adapter/: droidbot_app.py  droidbot_ime.py  minicap.py  uiautomator2_conn.py  yolo_model_manager.py
droidbot/resources/yolo/: best.onnx
web/: .env.example  .gitignore  README.md  alembic.ini  main.py
web/alembic/: README  env.py
web/alembic/versions/: 2b4cf6fc0424_create_batch_table.py  a53ad27be4f1_seed_default_admin_user.py  bbb4058d5529_seed_legacy_migration_batch.py  c3d4e5f6a7b8_add_claim_limit_per_user_to_batches.py  c6c55efd4bea_add_cloud_devices_table.py  f29f0ce854e8_add_task_management_tables.py  f7ef02bb2776_create_users_table.py
web/backend/: config.py  errors.py  main.py  session_config.py
web/backend/auth/: __init__.py  dependencies.py  security.py
web/backend/crud/: __init__.py  batch.py  batch_allocation.py  cloud_device.py  recording.py  task.py  user.py
web/docker/: docker-compose.yml
web/docs/: 00-overview.md  01-user-management.md  02-task-management.md  03-cloud-device-management.md  04-batch-management.md  05-frontend-conventions.md
web/templates/: index.html
(+70 files in other folders)
